k8s/1.pg-depl.k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pg-depl
  labels:
    app: pgdb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pgdb
  template:
    metadata:
      labels:
        app: pgdb
    spec:
      containers:
        - name: pgdb
          image: 'postgres:13.2-alpine'
          resources:
            limits:
              memory: '256Mi'
              cpu: '500m'
          ports:
            - containerPort: 5432

          # volume runner in pod
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: pgvol

      # volume register
      volumes:
        - name: pgvol
          persistentVolumeClaim:
            claimName: gitlab-postgresql-storage
        - name: initdb
          configMap:
            name: gitlab-postgresql-initdb

---
apiVersion: v1
kind: Service
metadata:
  name: pg-srv
spec:
  selector:
    app: pgdb
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
