k8s/ingress-srv.k8s.yaml
# apiVersion: extensions/v1beta1
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  labels:
    name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  # tls:
  #   - hosts:
  #     - dnspurian.dev
  #     secretName: myapp-sec-tls
  rules:
    # map with /etc/hosts
    - host: dnspurian.dev
      http:
        paths:
          - pathType: Prefix
            path: /api/v1/auth
            backend:
              service:
                name: auth-api-srv
                port:
                  number: 5003
# ---
# apiVersion: v1
# kind: Secret
# metadata:
#   name: myapp-sec-tls
#   namespace: default
# data:
#   tsl.crt: bas64 encoded
#   tsl.key: bas64 encoded
# type: kubernetes.io/tls
